# openHiTLS

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README-en.md  README-zh.md  README.md  Third_Party_Open_Source_Software_Notice  build.sh  configure.py
testcode/demo/: CMakeLists.txt  client.c  drbg.c  ecdh.c  hash.c  pbkdf2.c  privpass_token.c  server.c  sm2enc.c  sm2sign.c  sm4cbc.c  tlcp_client.c  tlcp_server.c
testcode/demo/ngx_adapter/: ngx_event_hitls.c  ngx_event_hitls.h
testcode/framework/gen_test/: CMakeLists.txt  helper.c  main.c  test.c
testcode/framework/process/: CMakeLists.txt  process.c
testcode/framework/tls/: CMakeLists.txt
testcode/framework/tls/base/include/: lock.h  logger.h
testcode/framework/tls/base/src/: lock.c  logger.c
testcode/framework/tls/callback/include/: cert_callback.h  hitls_x509_adapter.h
testcode/framework/tls/callback/src/: cert_callback.c
testcode/framework/tls/crypt/include/: stub_crypt.h
testcode/framework/tls/crypt/src/: stub_crypt.c
testcode/framework/tls/frame/src/: frame_connect.c  frame_init.c  frame_link.c  frame_link.h  frame_msg.c
testcode/framework/tls/func_wrapper/include/: rec_wrapper.h
testcode/framework/tls/func_wrapper/src/: rec_wrapper.c
testcode/framework/tls/include/: frame_msg.h  frame_tls.h  hlt.h  hlt_type.h
testcode/framework/tls/io/include/: frame_io.h
testcode/framework/tls/io/src/: simulate_io.c  simulate_io.h
testcode/framework/tls/msg/include/: pack_frame_msg.h  parser_frame_msg.h
testcode/framework/tls/msg/src/: frame_msg_method.c  frame_pack_msg.c  frame_parse_msg.c  pack_frame_msg.c  parser_frame_msg.c
testcode/framework/tls/process/include/: handle_cmd.h  process.h
testcode/framework/tls/process/src/: handle_cmd.c  process.c
testcode/framework/tls/resource/include/: channel_res.h  tls_res.h
testcode/framework/tls/resource/src/: channel_res.c  tls_res.c
testcode/framework/tls/rpc/include/: common_func.h  hitls_func.h  rpc_func.h
testcode/framework/tls/rpc/src/: common_func.c  hitls_func.c  hlt_func.c  hlt_rpc_func.c  rpc_func.c
testcode/framework/tls/transfer/include/: control_channel.h  sctp_channel.h  socket_common.h  tcp_channel.h
testcode/framework/tls/transfer/src/: control_channel.c  sctp_channel.c  socket_common.c  tcp_channel.c  udp_channel.c
testcode/sdv/: CMakeLists.txt
testcode/sdv/testcase/apps/: test_suite_ut_app_conf.c  test_suite_ut_app_conf.data  test_suite_ut_app_crl.c  test_suite_ut_app_crl.data  test_suite_ut_app_genpkey.c  test_suite_ut_app_genpkey.data  test_suite_ut_app_genrsa.c  test_suite_ut_app_genrsa.data  test_suite_ut_app_kdf.c  test_suite_ut_app_kdf.data  test_suite_ut_app_key.c  test_suite_ut_app_key.data  test_suite_ut_app_keymgmt.c  test_suite_ut_app_keymgmt.data  test_suite_ut_app_list.c  test_suite_ut_app_list.data  test_suite_ut_app_mac.c  test_suite_ut_app_mac.data  test_suite_ut_app_passwd.c  test_suite_ut_app_passwd.data  test_suite_ut_app_pkcs12.c  test_suite_ut_app_pkcs12.data  test_suite_ut_app_pkey.c  test_suite_ut_app_pkey.data  test_suite_ut_app_pkeyutl.c  test_suite_ut_app_pkeyutl.data  test_suite_ut_app_req.c  test_suite_ut_app_req.data  test_suite_ut_app_rsa.c  test_suite_ut_app_rsa.data  test_suite_ut_app_sm.c  test_suite_ut_app_sm.data  test_suite_ut_app_verify.c  test_suite_ut_app_verify.data  test_suite_ut_app_x509.c  test_suite_ut_app_x509.data  test_suite_ut_dgst.c  test_suite_ut_dgst.data  test_suite_ut_enc.c  test_suite_ut_enc.data  (+10 more)
testcode/sdv/testcase/auth/privpass_token/: test_suite_sdv_privpass_token.c  test_suite_sdv_privpass_token.data
testcode/sdv/testcase/bsl/asn1/: test_suite_sdv_asn1.c  test_suite_sdv_asn1.data
testcode/sdv/testcase/bsl/base64/: test_suite_sdv_base64.c  test_suite_sdv_base64.data
testcode/sdv/testcase/bsl/err/: test_suite_sdv_err.c
testcode/sdv/testcase/bsl/hash/: test_suite_sdv_hash.c
testcode/sdv/testcase/bsl/list/: test_suite_sdv_list.c  test_suite_sdv_list.data
testcode/sdv/testcase/bsl/log/: test_suite_sdv_log.c
testcode/sdv/testcase/bsl/params/: test_suite_sdv_params.c  test_suite_sdv_params.data  test_suite_sdv_params_maker.c  test_suite_sdv_params_maker.data
testcode/sdv/testcase/bsl/pem/: test_suite_sdv_pem.c  test_suite_sdv_pem.data
testcode/sdv/testcase/bsl/sal/: test_suite_sdv_sal.c  test_suite_sdv_sal.data  test_suite_sdv_sal_atomic.c  test_suite_sdv_sal_dl.c  test_suite_sdv_sal_dl.data  test_suite_sdv_sal_file.c  test_suite_sdv_sal_socket.c  test_suite_sdv_sal_time.c
testcode/sdv/testcase/bsl/tlv/: test_suite_sdv_tlv.c
testcode/sdv/testcase/bsl/uio/: test_suite_sdv_uio.c  test_suite_sdv_uio.data
testcode/sdv/testcase/bsl/usr/: test_suite_sdv_usr.c
testcode/sdv/testcase/cmvp/: test_suite_sdv_cmvp.c  test_suite_sdv_cmvp.data
testcode/sdv/testcase/codecs/decode/: test_suite_sdv_decode.c
testcode/sdv/testcase/crypto/aes/: test_suite_sdv_eal_aes.c  test_suite_sdv_eal_aes.data  test_suite_sdv_eal_aes_ccm.c  test_suite_sdv_eal_aes_ccm.data  test_suite_sdv_eal_aes_gcm.c  test_suite_sdv_eal_aes_gcm.data  test_suite_sdv_eal_cipher.c  test_suite_sdv_eal_cipher.data
testcode/sdv/testcase/crypto/bn/: test_suite_sdv_bn.c  test_suite_sdv_bn.data
testcode/sdv/testcase/crypto/cbc_mac/: test_suite_sdv_eal_mac_cbc_mac.c  test_suite_sdv_eal_mac_cbc_mac.data
testcode/sdv/testcase/crypto/chacha-poly/: test_suite_sdv_eal_chachapoly.c
testcode/sdv/testcase/crypto/cmac/: test_suite_sdv_eal_mac_cmac.c  test_suite_sdv_eal_mac_cmac.data
testcode/sdv/testcase/crypto/curve25519/: test_suite_sdv_eal_curve25519.c  test_suite_sdv_eal_curve25519.data
testcode/sdv/testcase/crypto/curve448/: test_suite_sdv_eal_curve448.c  test_suite_sdv_eal_curve448.data
testcode/testdata/provider/: CMakeLists.txt  provider_get_cap_test1.c  provider_load_p12.c  provider_load_test1.c  provider_load_test2.c  provider_load_test_no_fullfunc.c  provider_load_test_no_init.c  provider_load_test_providerNoFree.c  provider_load_test_providerNoInit.c  provider_new_alg_test.c  provider_self_decoder_test.c  provider_sha256.c  provider_test_utils.c  provider_test_utils.h
(+1963 files in other folders)
